# TimeGuessr-Bot

./: .dockerignore  .gitignore  Dockerfile  README.md  install.md  main.bicep  pyproject.toml
src/: client.py  custom_types.py  gameloop.py  main.py  model.py  player.py  settings.py  teams.py
src/bots/: base.py  llm.py  perfect.py  random_offset.py
